again the same alignment issue

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -105,6 +105,7 @@ input::-webkit-inner-spin-button {
 
 input{
   min-width: 72vw;
+  max-width: 72vw;
   border: none;
   outline: none;
   padding: 8px;
@@ -1163,6 +1164,7 @@ input[type="number"] ::-webkit-inner-spin-button {
 
 input{
   min-width: 72vw;
+  max-width: 72vw;
   border: none;
   outline: none;
   padding: 8px;
@@ -1296,6 +1298,7 @@ input[type="number"] ::-webkit-inner-spin-button {
 
 input{
   min-width: 72vw;
+  max-width: 72vw;
   border: none;
   outline: none;
   padding: 8px;
